--- a/Clip_Multiple_Layers_dialog_base.ui
+++ b/Clip_Multiple_Layers_dialog_base.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>372</width>
-    <height>266</height>
+    <width>399</width>
+    <height>282</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -116,16 +116,16 @@
     </rect>
    </property>
   </widget>
-  <widget class="QWidget" name="verticalLayoutWidget">
+  <widget class="QWidget" name="formLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>2</width>
-     <height>2</height>
+     <x>30</x>
+     <y>20</y>
+     <width>321</width>
+     <height>241</height>
     </rect>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout"/>
+   <layout class="QFormLayout" name="formLayout"/>
   </widget>
  </widget>
  <resources/>
