--- a/Clip_Multiple_Layers_dialog_base.ui
+++ b/Clip_Multiple_Layers_dialog_base.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>372</width>
+    <height>266</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -18,8 +18,8 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>400</width>
-    <height>300</height>
+    <width>591</width>
+    <height>397</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -120,12 +120,34 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>20</y>
-     <width>351</width>
-     <height>241</height>
+     <y>110</y>
+     <width>331</width>
+     <height>111</height>
     </rect>
    </property>
    <layout class="QFormLayout" name="formLayout"/>
+  </widget>
+  <widget class="QWidget" name="formLayoutWidget_2">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>10</y>
+     <width>291</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <layout class="QFormLayout" name="formLayout_2"/>
+  </widget>
+  <widget class="QWidget" name="verticalLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>60</y>
+     <width>61</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout"/>
   </widget>
  </widget>
  <resources/>
